--- a/android_gradle/RandomQuotesWidget/src/main/res/layout/widget_layout.xml
+++ b/android_gradle/RandomQuotesWidget/src/main/res/layout/widget_layout.xml
@@ -7,15 +7,24 @@
         android:orientation="vertical">
         
         <TextView
+            android:id="@+id/file_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textColor="#888888">
+        </TextView> 
+        <TextView
             android:id="@+id/update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
             android:textColor="#000000" >
-        </TextView>    
+        </TextView> 
         <TextView
-            android:id="@+id/paragraph_number"
+            android:id="@+id/line_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -24,4 +33,15 @@
             android:textSize="14sp"
             android:textColor="#888888">
         </TextView> 
+        <TextView
+            android:id="@+id/quotes_index"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textColor="#888888">
+        </TextView> 
+                
 </RelativeLayout>
