--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/res/layout/configure_layout.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/res/layout/configure_layout.xml
@@ -5,16 +5,15 @@
     android:orientation="vertical" >
     
     <TextView
-        android:id="@+id/title_text_view"
+        android:id="@+id/config_title_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/configure_screen_title"
+        android:text="@string/config_title_textview"
         android:textAppearance="?android:attr/textAppearanceLarge" />
     <EditText
-        android:id="@+id/file_edit_text"
+        android:id="@+id/config_files_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/file_dir_name_label"
         android:inputType="textMultiLine" />
         
     <LinearLayout 
@@ -22,30 +21,30 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         <Button
-            android:id="@+id/ok_button"
+            android:id="@+id/config_ok_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ok_label" 
+            android:text="@string/config_ok_button" 
             android:onClick="saveUserConfiguration"/>
         <Button
-            android:id="@+id/browse_button"
+            android:id="@+id/config_browse_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/browse_label" 
+            android:text="@string/config_browse_button" 
             android:onClick="browseFileDirectories"/>
     </LinearLayout>
     
     <TextView
-        android:id="@+id/instructions_text_view"
+        android:id="@+id/config_instructions_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/configure_screen_instructions"
         android:textAppearance="?android:attr/textAppearanceSmall" /> 
     <EditText
-        android:id="@+id/log_edit_text"
+        android:id="@+id/config_log_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/configure_screen_log"
+        android:text="@string/config_log_edittext"
         android:textAppearance="?android:attr/textAppearanceSmall" 
         android:editable="false" />   
 
