--- a/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/res/layout/configure_layout.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesWidget/src/main/res/layout/configure_layout.xml
@@ -17,7 +17,7 @@
         android:inputType="textMultiLine" />
         
     <LinearLayout 
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         <Button
