--- a/android_gradle/RandomQuotes/RandomQuotesApp/src/main/res/layout/configure_layout.xml
+++ b/android_gradle/RandomQuotes/RandomQuotesApp/src/main/res/layout/configure_layout.xml
@@ -1,51 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-    <TextView
-        android:id="@+id/config_title_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/config_title_textview"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-    <EditText
-        android:id="@+id/config_files_edittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine" />
-        
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-        <Button
-            android:id="@+id/config_ok_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/config_ok_button" 
-            android:onClick="saveUserConfiguration"/>
-        <Button
-            android:id="@+id/config_browse_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/config_browse_button" 
-            android:onClick="browseFileDirectories"/>
-    </LinearLayout>
-    
-    <TextView
-        android:id="@+id/config_instructions_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/configure_screen_instructions"
-        android:textAppearance="?android:attr/textAppearanceSmall" /> 
-    <EditText
-        android:id="@+id/config_log_edittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/config_log_edittext"
-        android:textAppearance="?android:attr/textAppearanceSmall" 
-        android:editable="false" />   
+    android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        
+        <TextView
+            android:id="@+id/config_title_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/config_title_textview"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
+        <EditText
+            android:id="@+id/config_files_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine" />
+            
+        <LinearLayout 
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <Button
+                android:id="@+id/config_ok_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/config_ok_button" 
+                android:onClick="saveUserConfiguration"/>
+            <Button
+                android:id="@+id/config_browse_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/config_browse_button" 
+                android:onClick="browseFileDirectories"/>
+        </LinearLayout>
+        
+        <TextView
+            android:id="@+id/config_instructions_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/configure_screen_instructions"
+            android:textAppearance="?android:attr/textAppearanceSmall" /> 
+        <EditText
+            android:id="@+id/config_log_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/config_log_edittext"
+            android:textAppearance="?android:attr/textAppearanceSmall" 
+            android:editable="false" />   
+
+    </LinearLayout>
+</ScrollView>
